[gd_scene load_steps=2 format=1]

[ext_resource path="res://Start.gd" type="Script" id=1]

[node name="Start" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 13.0
margin/bottom = 14.0
script/script = ExtResource( 1 )

[node name="LoadDatabase" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 6.0
margin/top = 15.0
margin/right = 111.0
margin/bottom = 35.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load Database"
flat = false

[node name="CreateDatabase" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 124.0
margin/top = 16.0
margin/right = 240.0
margin/bottom = 36.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Create Database"
flat = false

[connection signal="pressed" from="LoadDatabase" to="." method="_on_LoadDatabase_pressed"]

[connection signal="pressed" from="CreateDatabase" to="." method="_on_CreateDatabase_pressed"]


